Port 1.20.1 to Java 17 with native NBT and KubeJS 6 integration